Fix to what appears to be a bug stemming from the SF Metadata WSDL
See
http://salesforce.stackexchange.com/questions/15902/how-to-dynamically-s
et-type-x-value-for-metadata-customfield/15913#15913

--- a/apex-mdapi/src/classes/MetadataServiceExamples.cls
+++ b/apex-mdapi/src/classes/MetadataServiceExamples.cls
@@ -108,6 +108,14 @@ public with sharing class MetadataServiceExamples
  		MetadataService.AsyncResult[] results = service.create(new List<MetadataService.Metadata> { customField });
 	}
 	
+	public static void deleteField()
+	{
+		MetadataService.MetadataPort service = createService();		
+		MetadataService.CustomField customField = new MetadataService.CustomField();
+		customField.fullName = 'Test__c.TestField__c';
+ 		MetadataService.AsyncResult[] results = service.deleteMetadata(new List<MetadataService.Metadata> { customField });		
+	}
+	
 	public static void updateField()
 	{
 	    MetadataService.MetadataPort service = createService(); 
