Added example and support for adding and updating FieldSets
See StackExchange,
http://salesforce.stackexchange.com/questions/16836/can-we-insert-or-upd
ate-fieldsets-using-apex-code

--- a/apex-mdapi/src/classes/MetadataService.cls
+++ b/apex-mdapi/src/classes/MetadataService.cls
@@ -1667,17 +1667,21 @@ public class MetadataService {
         private String[] apex_schema_type_info = new String[]{'http://soap.sforce.com/2006/04/metadata','true','false'};
         private String[] field_order_type_info = new String[]{'connector','faultConnector','filters','object_x','outputAssignments','sortField','sortOrder'};
     }
-    public class FieldSet {
+    public class FieldSet extends Metadata {
+    	public String type = 'FieldSet';
+    	public String fullName;
         public MetadataService.FieldSetItem[] availableFields;
         public String description;
         public MetadataService.FieldSetItem[] displayedFields;
         public String label;
+        private String[] type_att_info = new String[]{'xsi:type'};
+        private String[] fullName_type_info = new String[]{'fullName','http://www.w3.org/2001/XMLSchema','string','0','1','false'};
         private String[] availableFields_type_info = new String[]{'availableFields','http://soap.sforce.com/2006/04/metadata','FieldSetItem','0','-1','false'};
         private String[] description_type_info = new String[]{'description','http://www.w3.org/2001/XMLSchema','string','1','1','false'};
         private String[] displayedFields_type_info = new String[]{'displayedFields','http://soap.sforce.com/2006/04/metadata','FieldSetItem','0','-1','false'};
         private String[] label_type_info = new String[]{'label','http://www.w3.org/2001/XMLSchema','string','1','1','false'};
         private String[] apex_schema_type_info = new String[]{'http://soap.sforce.com/2006/04/metadata','true','false'};
-        private String[] field_order_type_info = new String[]{'availableFields','description','displayedFields','label'};
+        private String[] field_order_type_info = new String[]{'fullName','availableFields','description','displayedFields','label'};
     }
     public class AccountCriteriaBasedSharingRule {
         public String accountAccessLevel;
